--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- <h1>This is header</h1> -->
     </header>
     <main>
-        <section class="mx-auto mt-5 w-100 md:w-100 bg-slate-100 py-4 px-7">
+        <section class="mx-auto mt-5 w-100 md:w-100 lg:w-3/4 bg-slate-100 py-4 px-7">
             <h1 class="text-center text-3xl font-semibold text-gray-500 mb-6">select your desired product from our
                 store...</h1>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 item-parent">
